# iot-kurssi

./: .gitignore  README.md
lora_receiver/: lora_receiver.ino
lora_transmitter/: lora_transmitter.ino
pydisplay/: README.md  clear_screen.py  main.py  requirements.txt
pyuart/: main.py
reset_led/: Cargo.toml  README.md
reset_led/src/: main.rs
services/: pydisplay.service  pyuart.service  temperature_reader.service  web_server.service
temperature_reader/: Cargo.toml
temperature_reader/src/: env_loader.rs  fun.rs  main.rs  models.rs
temperature_reader/src/env_loader/: mod.rs
temperature_reader/src/models/: mod.rs
web_server/: Cargo.toml
web_server/src/: main.rs
web_server/static/: index.html
