[package]
name = "temperature_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev = []

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
rppal = "0.13.0"
rppal-dht11 = "0.4.0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"
